--- a/index-no-minified.html
+++ b/index-no-minified.html
@@ -56,7 +56,7 @@
 
     <footer class="attribution gray-clr">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#" target="_blank">Fernando Pérez</a>.
+      Coded by <a href="https://www.frontendmentor.io/solutions/nft-preview-card-component-solution-4xxSKNLjAd" target="_blank">Fernando Pérez</a>.
     </footer>
 </body>
 </html>
